--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
 
-title{
-  background-color: "black";
-  color: "white"
-  front-size: 40 px;
-}
 body{
-  background-color: "blue"
-  color: "cyan"
+    background-color: rgb(199, 196, 162);
+    color: rgb(238, 242, 245);
 }
 h1{
-  front-size: 20 px;
+    color: rgb(255, 81, 0);
+}
+section{
+    background: rgb(230, 211, 9);
+    padding-top: 80px;
+    padding-bottom: 80px;
+    display: flex;
+    justify-items: center;
+    justify-content: center;
 }
