--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 
 body{
-    background-color: rgb(199, 196, 162);
-    color: rgb(238, 242, 245);
+    background-color: rgb(255, 234, 0)
+    color: rgb (238, 242, 245);
 }
 h1{
-    color: rgb(255, 81, 0);
+    color: rgb(2, 217, 255);
 }
 section{
-    background: rgb(230, 211, 9);
+    background: rgb(255, 255, 255);
     padding-top: 80px;
     padding-bottom: 80px;
     display: flex;
