--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 
 body{
-    background-color: rgb(255, 234, 0)
-    color: rgb (238, 242, 245);
+    background-color: rgb(255, 255, 255)
+    color rgb(0, 0, 0);
 }
 h1{
     color: rgb(2, 217, 255);
 }
 section{
-    background: rgb(43, 0, 0);
+    background: rgb(109, 117, 39);
     padding-top: 80px;
     padding-bottom: 80px;
     display: flex;
