--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ h1{
     color: rgb(2, 217, 255);
 }
 section{
-    background: rgb(202, 223, 255)
+    background: rgb(202, 223, 255);
     padding-top: 80px;
     padding-bottom: 80px;
     display: flex;
