--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ h1{
 section{
     background: rgb(202, 223, 255);
     padding-top: 80px;
-    padding-bottom: 90px;
+    padding-bottom: 80px;
     display: flex;
-    justify-items: center;
-    justify-content: center;
+    justify-items: left;
+    justify-content: left;
 }
