--- a/style.css
+++ b/style.css
@@ -19,5 +19,5 @@ section{
     padding-bottom: 40px;
     display: flex;
     justify-items: left;
-    justify-content: left;
+    justify-content: center;
 }
