--- a/style.css
+++ b/style.css
@@ -4,15 +4,18 @@ body{
     color rgb(0, 0, 0);
 }
 h1{
+    background-color: rgb(202, 223, 255);
     color: rgb(0, 69, 109);
+    justify-items: center;
+    justify-content: center;
 }
 section{
     background-color: rgb(202, 223, 255);
     padding-top: 80px;
     padding-bottom: 40px;
     display: flex;
-    justify-items: left;
-    justify-content: left;
+    justify-items: center;
+    justify-content: center;
 }
 head{
     background-color: rgb(202, 223, 255);
